# gpt-gleam

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml  requirements.txt
configs/cfact/: cfact-gpt3.5-target.yaml  cfact-gpt3.5.yaml  cfact-gpt4-target.yaml  cfact-gpt4.yaml  cfact-gpt4v.yaml  cot-gpt3.5-target.yaml  cot-gpt3.5.yaml  cot-gpt4-target.yaml  cot-gpt4.yaml  cot-gpt4v.yaml  direct-gpt3.5-target.yaml  direct-gpt3.5.yaml  direct-gpt4-target.yaml  direct-gpt4.yaml  direct-gpt4v.yaml  experiments.sh  semeval_ex.sh  semeval_ex_cfact.sh  verify-gpt3.5-target.yaml  verify-gpt3.5.yaml  verify-gpt4-target.yaml  verify-gpt4.yaml  verify-gpt4v.yaml
gpt_gleam/: chat.py  configuration.py  data.py  eval.py  gleam.py  labeled.py  predictions.py  progress.py  results.py  unlabeled.py
