[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-gleam"
version = "0.1.0"
description = "Natural Language Processing Library for Social Media with GPT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Supermaxman/gpt-gleam"
"Bug Tracker" = "https://github.com/Supermaxman/gpt-gleam/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.isort]
known_first_party = [
    "docs",
    "configs",
    "gpt_gleam",
    "tests",
]
profile = "black"
line_length = 120
force_sort_within_sections = "False"
order_by_type = "False"


[tool.black]
line-length = 120